--- a/TWJieShuQuan/main.storyboard
+++ b/TWJieShuQuan/main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="McA-zT-FMQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="McA-zT-FMQ">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -533,8 +533,8 @@
                                                         <constraint firstAttribute="width" constant="30" id="LTY-Nu-e5d"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzY-cY-0Ti">
-                                                    <rect key="frame" x="46" y="37" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzY-cY-0Ti">
+                                                    <rect key="frame" x="46" y="37" width="546" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -555,6 +555,7 @@
                                             <constraints>
                                                 <constraint firstItem="Qi9-yE-E2c" firstAttribute="top" secondItem="eVH-ta-1T5" secondAttribute="top" constant="8" id="0Ve-aZ-8t2"/>
                                                 <constraint firstItem="bFd-la-CRE" firstAttribute="leading" secondItem="eVH-ta-1T5" secondAttribute="leading" constant="8" id="3mh-wk-zBg"/>
+                                                <constraint firstAttribute="trailing" secondItem="DzY-cY-0Ti" secondAttribute="trailing" constant="8" id="A9I-Lm-oeO"/>
                                                 <constraint firstItem="hwP-Ue-YvG" firstAttribute="top" secondItem="eVH-ta-1T5" secondAttribute="top" constant="8" id="FHj-Ob-F0Z"/>
                                                 <constraint firstItem="DzY-cY-0Ti" firstAttribute="top" secondItem="hwP-Ue-YvG" secondAttribute="bottom" constant="8" id="Jsn-HA-rKF"/>
                                                 <constraint firstItem="hwP-Ue-YvG" firstAttribute="leading" secondItem="DzY-cY-0Ti" secondAttribute="leading" id="NKx-SA-Vjf"/>
@@ -587,6 +588,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="发现" id="7ro-LT-C1q"/>
+                    <connections>
+                        <outlet property="findList" destination="WHh-HU-i1v" id="k3X-Lm-6r1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7WG-2a-pMh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
